--- a/WebContent/templates/fodder/css/style.css
+++ b/WebContent/templates/fodder/css/style.css
@@ -1,7 +1,7 @@
 html, body{
     font-size: 100%;
-	background:	#a5ad7a;
-	font-family: 'Montserrat', sans-serif;
+    background: #ffa709;
+    font-family: 'Montserrat', sans-serif;
 }
 
 p{
@@ -20,7 +20,7 @@ body a:hover{
 /*-- banner-body --*/
 .banner-body{
 	padding:2.5em 0;
-	background:#042f11;
+	background: #ffa709;
 }
 
 .user {
@@ -30,10 +30,11 @@ body a:hover{
 }
 
 .user a, .user a:visited {
-	color : #fff;
-	font-size : 14px;
+	color: #000;
+	font-size: 0.9em;
+	font-weight: bold;
 	padding-right : 10px;
-	font-family : Pacifico;
+	/* font-family : Pacifico; */
 }
 
 /*-- //banner-body --*/
@@ -43,31 +44,33 @@ body a:hover{
 }
 
 .banner-right img {
-	width : 100%;
-	height : 300px;
-	margin-top : -56px;
+	width: 65%;
+	/* height : 300px; */
+	margin-top: -69px;
 	filter : saturate(1.5);
 }
 
 .banner-right  h1{
-	color : #004815;
-	font-family : Pacifico;
+	color: #ff3d00;
+	font-family: Montserrat;
 	font-size: 6em;
-    text-align : center;   
-    margin-top : 25px; 
+	text-align : center;
+	margin-top : 25px;
 }
 
 .banner-right a h1{
-	color : #004815;
-	font-family : Pacifico;
-	font-size: 4em;
-    margin-top: -5px;
-    margin-left : -180px;
+	color: #ea950a;
+	font-family: Montserrat;
+	font-style: italic;
+	font-size: 3em;
+	margin-top: 0px;
+	margin-left : -180px;
+	font-weight: bold;
 }
 .banner-left{
-	height: 580px;
-    background: #ff6600;
-    border-right : 20px solid #000;
+	height: 380px;
+	background: #ff3d00;
+	/* border-right : 20px solid #000; */
 }
 .menu {
 	width: auto;
@@ -102,7 +105,7 @@ ul.cute li{
     width: 100%;
     display: block;
     position: relative;
-    color: #004815;
+    color: #ffffff;
     text-decoration: none;
     line-height: 0.4em;
     text-transform: uppercase;
@@ -115,7 +118,7 @@ ul.cute li{
     margin-right: 6px;
     position: relative;
     top: 9px;
-    color: #000;
+    color: #fff;
     display : inline-block;
     width : 50px;
 }
@@ -134,14 +137,16 @@ li.item1 {
     padding: 0em 0 0 2em;
 }
 .banner-right{
-	background-image : url(../images/grid2.png);
-	background-color:#fff;
+	/* background-image : url(../images/grid2.png); */
+	background-color: #f5f5f5;
 	background-size:cover;
 	-webkit-background-size:cover;
 	-moz-background-size:cover;
 	-o-background-size:cover;
 	-ms-background-size:cover;
-	min-height:580px;
+	min-height: 380px;
+	/* border-bottom: 3px solid #000; */
+	/* border-left: 2px solid #000; */
 }
 .banner-right a{
 	display: block;
@@ -152,19 +157,19 @@ li.item1 {
 /*-- //banner --*/
 /*-- banner-bottom --*/
 .banner-bottom{
-	padding:4em;
-	background:#373f1b;
+	/* padding:4em; */
+	background: #ff3d00;
 }
 .banner-bottom-left1{
 	float:left;
 	width:45%;
 }
 .banner-bottom-left1 h4{
-	color: #9fac6f;
-    margin: 2.3em 0 0;
-    line-height: 1.8em;
-    font-size: 1.1em;
-    font-family: 'Pacifico', cursive;
+	color: #ffffff;
+	margin: 2.3em 0 0;
+	line-height: 1.8em;
+	font-size: 1em;
+	/* font-family: 'Pacifico', cursive; */
 }
 .banner-bottom-left2{
 	float:right;
@@ -172,10 +177,10 @@ li.item1 {
 }
 .banner-bottom-right h5{
 	color: #fff;
-    margin:2em 0 0;
-    line-height: 1.8em;
-    font-size: 1.3em;
-    font-family: 'Pacifico', cursive;
+	margin:2em 0 0;
+	line-height: 1.8em;
+	font-size: 1.3em;
+	/* font-family: 'Pacifico', cursive; */
 	position:relative;
 }
 .banner-bottom-right h5:before{
@@ -192,18 +197,18 @@ li.item1 {
 	text-align: center;
 }
 .banner-bottom-right p{
-	color: #9fac6f;
-    font-size: 14px;
-    margin:0 auto;
-    line-height: 1.8em;
-    width: 50%;
+	color: #ffffff;
+	font-size: 14px;
+	margin:0 auto;
+	line-height: 1.8em;
+	width: 50%;
 }
 /*-- //banner-bottom --*/
 /*-- about --*/
 .about{
 	padding:4em;
-	background-image : url(../images/grid.jpg);
-	background-color:#fff;
+	/* background-image : url(../images/grid.jpg); */
+	background-color: #f5f5f5;
 }
 
 ul.social {
@@ -267,19 +272,20 @@ ul.social li a.g{
 }
 .about-main{
 	padding:0 5em 5em;
-	background:#373f1b;
+	background: #ffa709;
 	position:relative;
 }
 .about-main h3,.menu1 h3,.book_table h3,.map-grids h3{
 	text-align: center;
-    color: #ff4d00;
-    font-size: 2em;
-    margin: 0 auto;
-    padding: 1em 0em;
-    width: 30%;
-    font-family : Pacifico;
-    text-transform : uppercase;
-    white-space : nowrap;
+	color: #ffffff;
+	font-size: 2em;
+	margin: 0 auto;
+	padding: 1em 0em;
+	width: 30%;
+	/* font-family : Pacifico; */
+	text-transform : uppercase;
+	white-space : nowrap;
+	font-weight: bold;
 }
 
 h3 .fa {
@@ -329,13 +335,13 @@ fieldset legend{
 }
 fieldset{
 	padding: 1.5em 2em 2em 2em;
-    color: #f8f2ee;
-    font-size: 14px;
-    line-height: 1.8em;
-    width: 68%;
-    position: relative;
-    margin: 4em auto 0;
-    border: 2px solid #ff4d00;
+	color: #000000;
+	font-size: 14px;
+	line-height: 1.8em;
+	width: 68%;
+	position: relative;
+	margin: 4em auto 0;
+	border: 2px solid #ff4d00;
 }
 fieldset:before{
 	background: url(../images/9.png) no-repeat 0px 0px;
@@ -349,7 +355,7 @@ fieldset:before{
 }
 .mnu1{
 	padding:0 5em 5em;
-	background:#373f1b;
+	background: #ffa709;
 	margin:4em 0 0;
 }
 .garlic{
@@ -392,21 +398,22 @@ fieldset:before{
     text-align: center;
 }
 .resp-tab-item{
-	color:#989E81;
-    font-size: 0.9em;
-    cursor: pointer;
-    padding: 6px 25px;
-    display: inline-block;
-    margin: 0;
-    text-align: center;
-    list-style: none;
-    outline: none;
-    -webkit-transition: all 0.3s ease-out;
-    -moz-transition: all 0.3s ease-out;
-    -ms-transition: all 0.3s ease-out;
-    -o-transition: all 0.3s ease-out;
-    transition: all 0.3s ease-out;
-    text-transform: uppercase;
+	color: #0c0c0c;
+	font-size: 0.9em;
+	font-weight: bold;
+	cursor: pointer;
+	padding: 6px 25px;
+	display: inline-block;
+	margin: 0;
+	text-align: center;
+	list-style: none;
+	outline: none;
+	-webkit-transition: all 0.3s ease-out;
+	-moz-transition: all 0.3s ease-out;
+	-ms-transition: all 0.3s ease-out;
+	-o-transition: all 0.3s ease-out;
+	transition: all 0.3s ease-out;
+	text-transform: uppercase;
 	margin: 0 0.5em 0;
 }
 .resp-tab-active,li.resp-tab-item:hover{
@@ -445,8 +452,8 @@ h2.resp-accordion {
 }
 .img-top h4{
 	font-size: 1.1em;
-    color: #807973;
-    padding: 0.8em 0;
+	color: #000;
+	padding: 0.8em 0;
 	text-align:center;
 	background:#fff;
 	text-transform:uppercase;
@@ -459,7 +466,7 @@ h2.resp-accordion {
 /*--//gallery--*/
 /*-- reserve --*/
 .reserve{
-	padding:4em 0;
+	padding: 0em 0;
 	position:relative;
 }
 .tabe{
@@ -467,7 +474,7 @@ h2.resp-accordion {
 	position:relative;
 }
 .book_table{
-	background:#373f1b;
+	background: #ff3d00;
 	min-height:633px;
 }
 .menu1 {
@@ -533,7 +540,7 @@ h2.resp-accordion {
 	-moz-transition:.5s all;
 	-o-transition:.5s all;
 	-ms-transition:.5s all;
-	border : 2px solid;
+	border: 2px solid;
 	height : auto;
 }
 
@@ -573,14 +580,14 @@ h2.resp-accordion {
     position: absolute;
     top: 0%;
     left: 0%;
-	background-color:#fff;
+    background-color: #ffa709;
 }
 .map-grids {
     position: absolute;
     top: 0%;
     left: 13%;
     width: 75%;
-    background-color:#042f11;
+    background-color: #ffa709;
 }
 .contact{
 	position:relative;
@@ -616,10 +623,10 @@ h2.resp-accordion {
 }
 .inp-form input[type="submit"]{
 	background: #ff4d00;
-    padding: 12px 0px;
-    width: 30%;
-    margin: 0 auto;
-    color: #fff;
+	padding: 12px 0px;
+	width: 30%;
+	margin: 0 auto;
+	color: #fff;
 	font-size:1em;
 	outline:none;
 	border:none;
@@ -629,7 +636,7 @@ h2.resp-accordion {
 	-moz-transition:.5s all;
 	-o-transition:.5s all;
 	-ms-transition:.5s all;
-	border : 2px solid;
+	border: 2px solid;
 	height : auto;
 }
 
@@ -643,7 +650,7 @@ h2.resp-accordion {
 	text-align:center;
 	color:#ff4d00;
 	margin:4em 0 .5em;
-	font-family: 'Pacifico', sans-serif;
+	/* font-family: 'Pacifico', sans-serif; */
 	font-size:1.6em;
 }
 .map-grids p{
@@ -659,32 +666,34 @@ h2.resp-accordion {
 }
 .mail-sub input[type="email"]{
 	outline: none;
-    padding: 12px 10px;
-    width:83%;
-    background: #9A9794;
-    font-size: 14px;
-    color: #fff;
-    border: none;
-    float: left;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
+	padding: 12px 10px;
+	width:83%;
+	background: #f7f5f3;
+	font-size: 14px;
+	color: #fff;
+	border: none;
+	float: left;
+	border-top-left-radius: 5px;
+	border-bottom-left-radius: 5px;
 }
 
 .mail-sub input[type="submit"]{
-	background: url(../images/17.png) no-repeat 38px 15px #D5D5D5;
-    float: left;
-    padding: 11px 0px;
-    width: 15%;
-    outline: none;
-    border: none;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    transition: .5s all;
-    -webkit-transition: .5s all;
-    -moz-transition: .5s all;
-    -o-transition: .5s all;
-    -ms-transition: .5s all;
-    height : auto;
+	/* background: url(../images/17.png) no-repeat 38px 15px #D5D5D5; */
+	background: #ff4d00;
+	color: #fff;
+	float: left;
+	padding: 11px 0px;
+	width: 15%;
+	outline: none;
+	border: none;
+	border-top-right-radius: 5px;
+	border-bottom-right-radius: 5px;
+	transition: .5s all;
+	-webkit-transition: .5s all;
+	-moz-transition: .5s all;
+	-o-transition: .5s all;
+	-ms-transition: .5s all;
+	height : auto;
 }
 .mail-sub input[type="submit"]:hover{
 	background: url(../images/17.png) no-repeat 38px 15px #fff;
@@ -750,10 +759,10 @@ h2.resp-accordion {
 
 .footer-left p{
 	font-size:12px;
-	color:#fff;
+	color: #000;
 	margin:.5em 0 0;
-	font-style:normal;
-	font-family : Pacifico;
+	/* font-weight: bold; */
+	/* font-family : Pacifico; */
 }
 .footer-left p a{
 	color:#ff4d00;
@@ -767,6 +776,7 @@ h2.resp-accordion {
 
 .scrollToTop {
 	background : #ff4d00;
+	border: 1px solid #fff;
 }
 
 .scrollToTop:hover, .scrollToTop:focus {
@@ -1486,7 +1496,7 @@ h2.typoh2{
 /*-----start-responsive-design------*/
 @media (max-width:1280px){
 	.banner-body {
-		padding: 4em 0;
+		padding: 3em 0;
 	}
 }
 @media (max-width: 1024px){
