--- a/WebContent/templates/fodder/css/style.css
+++ b/WebContent/templates/fodder/css/style.css
@@ -34,7 +34,6 @@ body a:hover{
 	font-size: 0.9em;
 	font-weight: bold;
 	padding-right : 10px;
-	/* font-family : Pacifico; */
 }
 
 /*-- //banner-body --*/
@@ -45,7 +44,6 @@ body a:hover{
 
 .banner-right img {
 	width: 65%;
-	/* height : 300px; */
 	margin-top: -69px;
 	filter : saturate(1.5);
 }
@@ -70,7 +68,6 @@ body a:hover{
 .banner-left{
 	height: 380px;
 	background: #ff3d00;
-	/* border-right : 20px solid #000; */
 }
 .menu {
 	width: auto;
@@ -123,6 +120,14 @@ ul.cute li{
     width : 50px;
 }
 
+.menu ul li .fa-lock {
+	margin-left : 3px;
+}
+
+.menu ul li .fa-info-circle {
+	margin-left : -2px;
+}
+
 .menu ul li a span {
 	display : inline-block;
 }
@@ -137,16 +142,13 @@ li.item1 {
     padding: 0em 0 0 2em;
 }
 .banner-right{
-	/* background-image : url(../images/grid2.png); */
 	background-color: #f5f5f5;
 	background-size:cover;
 	-webkit-background-size:cover;
 	-moz-background-size:cover;
 	-o-background-size:cover;
 	-ms-background-size:cover;
-	min-height: 380px;
-	/* border-bottom: 3px solid #000; */
-	/* border-left: 2px solid #000; */
+	height: 380px;
 }
 .banner-right a{
 	display: block;
@@ -157,8 +159,9 @@ li.item1 {
 /*-- //banner --*/
 /*-- banner-bottom --*/
 .banner-bottom{
-	/* padding:4em; */
+	padding-top : 20px;
 	background: #ff3d00;
+	height : 241px;
 }
 .banner-bottom-left1{
 	float:left;
@@ -169,7 +172,6 @@ li.item1 {
 	margin: 2.3em 0 0;
 	line-height: 1.8em;
 	font-size: 1em;
-	/* font-family: 'Pacifico', cursive; */
 }
 .banner-bottom-left2{
 	float:right;
@@ -180,7 +182,6 @@ li.item1 {
 	margin:2em 0 0;
 	line-height: 1.8em;
 	font-size: 1.3em;
-	/* font-family: 'Pacifico', cursive; */
 	position:relative;
 }
 .banner-bottom-right h5:before{
@@ -207,7 +208,6 @@ li.item1 {
 /*-- about --*/
 .about{
 	padding:4em;
-	/* background-image : url(../images/grid.jpg); */
 	background-color: #f5f5f5;
 }
 
@@ -282,7 +282,6 @@ ul.social li a.g{
 	margin: 0 auto;
 	padding: 1em 0em;
 	width: 30%;
-	/* font-family : Pacifico; */
 	text-transform : uppercase;
 	white-space : nowrap;
 	font-weight: bold;
@@ -650,7 +649,6 @@ h2.resp-accordion {
 	text-align:center;
 	color:#ff4d00;
 	margin:4em 0 .5em;
-	/* font-family: 'Pacifico', sans-serif; */
 	font-size:1.6em;
 }
 .map-grids p{
@@ -666,23 +664,22 @@ h2.resp-accordion {
 }
 .mail-sub input[type="email"]{
 	outline: none;
-	padding: 12px 10px;
+	padding: 12.5px 10px;
 	width:83%;
 	background: #f7f5f3;
 	font-size: 14px;
-	color: #fff;
+	color: #000;
 	border: none;
 	float: left;
-	border-top-left-radius: 5px;
-	border-bottom-left-radius: 5px;
+	border-radius: 5px;
+	border : 2px solid #ff4d00;
 }
 
 .mail-sub input[type="submit"]{
-	/* background: url(../images/17.png) no-repeat 38px 15px #D5D5D5; */
 	background: #ff4d00;
 	color: #fff;
 	float: left;
-	padding: 11px 0px;
+	padding: 10.75px 0px;
 	width: 15%;
 	outline: none;
 	border: none;
@@ -694,9 +691,11 @@ h2.resp-accordion {
 	-o-transition: .5s all;
 	-ms-transition: .5s all;
 	height : auto;
+	border : 2px solid;
 }
 .mail-sub input[type="submit"]:hover{
-	background: url(../images/17.png) no-repeat 38px 15px #fff;
+	background: #fff;
+	color : #ff4d00;
 }
 .mail-sub form {
     width: 80%;
@@ -761,8 +760,6 @@ h2.resp-accordion {
 	font-size:12px;
 	color: #000;
 	margin:.5em 0 0;
-	/* font-weight: bold; */
-	/* font-family : Pacifico; */
 }
 .footer-left p a{
 	color:#ff4d00;
