--- a/WebContent/templates/fodder/css/style.css
+++ b/WebContent/templates/fodder/css/style.css
@@ -19,7 +19,7 @@ body a:hover{
 }
 /*-- banner-body --*/
 .banner-body{
-	padding:2.5em 0;
+	padding:2.2em 0;
 	background: #ffa709;
 }
 
@@ -45,7 +45,7 @@ body a:hover{
 
 .banner-right img {
 	width: 65%;
-	margin-top: -69px;
+	margin-top: -80px;
 	filter : saturate(1.5);
 }
 
@@ -60,7 +60,7 @@ body a:hover{
 	filter : saturate(4);
 }
 .banner-left{
-	height: 380px;
+	height: 390px;
 	background: #ff3d00;
 }
 .menu {
@@ -100,7 +100,6 @@ ul.cute li{
     text-decoration: none;
     line-height: 0.4em;
     text-transform: uppercase;
-    letter-spacing: .5px;
     font-weight: bold;
     font-size: 1em;
 }
@@ -138,13 +137,14 @@ li.item1 {
     padding: 0em 0 0 2em;
 }
 .banner-right{
-	background-color: #f5f5f5;
+	background-image : url(../images/banner.png);
+	background-color: #ffa709;
 	background-size:cover;
 	-webkit-background-size:cover;
 	-moz-background-size:cover;
 	-o-background-size:cover;
 	-ms-background-size:cover;
-	height: 380px;
+	height: 390px;
 	overflow : hidden;
 }
 .banner-right a{
@@ -157,7 +157,7 @@ li.item1 {
 /*-- //banner --*/
 /*-- banner-bottom --*/
 .banner-bottom{
-	padding-top : 20px;
+	padding-top : 8px;
 	background: #ff3d00;
 	height : 242px;
 }
@@ -176,13 +176,14 @@ li.item1 {
 	width:50%;
 }
 .banner-bottom-right h5{
-	color: #fff;
-	margin:2em 0 0;
-	line-height: 1.8em;
-	font-size: 1.8em;
-	position:relative;
-	font-family : Ubuntu;
-	font-weight : bold;
+    color: #fff;
+    margin: 0em 0 0;
+    line-height: 1.8em;
+    font-size: 2.2em;
+    position: relative;
+    font-family: Ubuntu;
+    font-weight: bold;
+    white-space: nowrap;
 }
 .banner-bottom-right{
 	text-align: center;
@@ -193,6 +194,7 @@ li.item1 {
 	margin:0 auto;
 	line-height: 1.8em;
 	width: 50%;
+	font-family : Ubuntu;
 }
 /*-- //banner-bottom --*/
 /*-- about --*/
