--- a/WebContent/templates/fodder/css/style.css
+++ b/WebContent/templates/fodder/css/style.css
@@ -1,7 +1,7 @@
 html, body{
     font-size: 100%;
     background: #ffa709;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Exo', sans-serif;
 }
 
 p{
@@ -34,7 +34,23 @@ body a:hover{
 	font-size: 0.9em;
 	font-weight: bold;
 	padding-right : 10px;
-	font-family : Ubuntu;
+	font-family : Play;
+	cursor : pointer;
+}
+
+.social {
+	position: absolute;
+    top: 9px;
+    left: 24.4em;
+}
+
+.social a, .social a:visited {
+	color: #000;
+	font-size: 1em;
+	font-weight: bold;
+	padding-right : 10px;
+	font-family : Play;
+	cursor : pointer;
 }
 
 /*-- //banner-body --*/
@@ -50,7 +66,7 @@ body a:hover{
 
 .banner-right a h1{
 	color: #ff3d00;
-	font-family: Ubuntu;
+	font-family: Play;
 	font-style: italic;
 	font-size: 6em;
 	margin-top: -30px;
@@ -184,7 +200,7 @@ li.item1 {
     line-height: 1.8em;
     font-size: 2em;
     position: relative;
-    font-family: Ubuntu;
+    font-family: Play;
     font-weight: bold;
     white-space: nowrap;
     border-radius : 15px;
@@ -207,16 +223,17 @@ h5 .fa {
 	margin:0 auto;
 	line-height: 1.8em;
 	width: 75%;
-	font-family : Ubuntu;
+	font-family : Play;
 }
 /*-- //banner-bottom --*/
 /*-- about --*/
 .about{
 	padding:4em;
 	background-color: #fff;
-	background-image : url(../images/logo.png);
-    background-position : center 35%;
-    background-repeat : no-repeat;
+}
+
+.about img {
+	width : 100%;
 }
 
 ul.social {
@@ -337,7 +354,7 @@ fieldset legend{
 	font-size:1.5em;
 	position:relative;
 	text-align:center;
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Exo', sans-serif;
 	border-bottom: none;
 }
 fieldset{
@@ -464,7 +481,7 @@ h2.resp-accordion {
 	text-align:center;
 	background:#fff;
 	text-transform:uppercase;
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Exo', sans-serif;
 }
 .img-top1{
 	background:#fff;
@@ -487,7 +504,6 @@ h2.resp-accordion {
 
 .menu1 {
     position: relative;
-    margin-top : 360px;
 }
 .book_table form{
 	margin:0.5em auto 0;
@@ -749,7 +765,7 @@ h2.resp-accordion {
     font-size: 1em;
     color: #000;
     border-radius: 5px;
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Exo', sans-serif;
 	transition: 0.5s all ease;
 	-webkit-transition: 0.5s all ease;
 	-moz-transition: 0.5s all ease;
@@ -913,7 +929,7 @@ li.list-group-item1 {
 .grid_5 h3, .grid_5 h2, .grid_5 h1, .grid_5 h4, .grid_5 h5, h3.hdg, h3.bars {
 	margin-bottom: 1em;
     color: #F26F62;
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Exo', sans-serif;
 }
 .table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td {
   border-top: none !important;
@@ -1159,12 +1175,12 @@ h2.typoh2{
     color:#A5AD7A;
     margin: 0 0 1em;
     text-transform: capitalize;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Exo', sans-serif;
 }
 .blog-page-grid1 p a {
     color: #E49B24;
     text-decoration: none;
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Exo', sans-serif;
 }
 .blg-pg {
   margin: 4em 0 0;
@@ -1237,7 +1253,7 @@ h2.typoh2{
     text-transform: capitalize;
     margin: 1em 0;
     font-size: 1.3em;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Exo', sans-serif;
 	}
 .single-right p {
   color: #999;
@@ -1298,7 +1314,7 @@ h2.typoh2{
 	font-size:14px;
 	border:1px dotted #adadad;
 	padding:.5em  1em;
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Exo', sans-serif;
 	}
 .cat-grid ul li a:hover{
 	text-decoration:none;
@@ -1314,7 +1330,7 @@ h2.typoh2{
     margin: 0;
     font-style: normal;
     padding: 2em 0;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Exo', sans-serif;
 	}
 .three-com h3 span{
 	color:#AFAFAF;
@@ -1347,7 +1363,7 @@ h2.typoh2{
     font-size: 1em;
     font-style: normal;
     margin: 0;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Exo', sans-serif;
 	}
 .tom-right p label{
 	color:#AFAFAF;
@@ -1385,7 +1401,7 @@ h2.typoh2{
     -moz-transition: .5s all;
     -o-transition: .5s all;
     -ms-transition: .5s all;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Exo', sans-serif;
 	}
 .reply a:hover{
 	background:url(../images/update.png) no-repeat 16px 8px #000;
@@ -1463,7 +1479,7 @@ h2.typoh2{
   padding: 5px 11px;
   color: #999;
   font-size: 14px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Exo', sans-serif;
 }
 .top-social-icons a:hover{
 	background:#f17c5e;
@@ -1479,7 +1495,7 @@ h2.typoh2{
 	font-size: 1.2em;
     line-height: 1.5em;
     color:#E49B24;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Exo', sans-serif;
     margin: 0 0 0.8em;
 }
 .services-grd:nth-child(4) {
