improving the project.

--- a/WebContent/templates/fodder/css/style.css
+++ b/WebContent/templates/fodder/css/style.css
@@ -44,7 +44,7 @@ body a:hover{
 }
 
 .social a, .social a:visited {
-	color: #000;
+	color: #ff3d00;
 	font-size: 1em;
 	font-weight: bold;
 	padding-right : 10px;
