--- a/WebContent/templates/fodder/css/style.css
+++ b/WebContent/templates/fodder/css/style.css
@@ -218,20 +218,22 @@ li.item1 {
 	float:right;
 	width:50%;
 }
-.banner-bottom-right h5{
+.banner-bottom-right h5 {
     color: #ff8500;
     margin: 0em 0 0;
     line-height: 1.8em;
+    padding-top: 6px;
     font-size: 2em;
     position: relative;
     font-family: Satisfy;
     font-weight: bold;
     white-space: nowrap;
-    border-radius : 15px;
-    margin-bottom : 8px;
-    margin-top : 20px;
-    background : #ffa709;
-    filter : saturate(6);
+    border-radius: 15px;
+    border: 3px solid #fff;
+    margin-bottom: 8px;
+    margin-top: 20px;
+    background: #ffa709;
+    filter: saturate(6);
 }
 
 h5 .fa {
