improving the project.

--- a/WebContent/templates/fodder/css/style.css
+++ b/WebContent/templates/fodder/css/style.css
@@ -175,7 +175,7 @@ li.item1 {
     padding: 0em 0 0 2em;
 }
 .banner-right{
-	background-image : url(../images/banner.png);
+	background-image : url(../images/chicken_1.jpeg);
 	background-color: #ffa709;
 	background-size:cover;
 	-webkit-background-size:cover;
