--- a/WebContent/templates/fodder/css/style.css
+++ b/WebContent/templates/fodder/css/style.css
@@ -53,7 +53,7 @@ body a:hover{
 }
 
 .banner > .social a,.banner > .social a:visited {
-	font-size : 1em;
+	font-size : 1.03em;
 	color : #000;
 	cursor : pointer;
 }
@@ -126,8 +126,6 @@ ul.cute li{
 	margin:0 0 .5em;
 }
 .menu ul li a {
-    width: 100%;
-    display: block;
     position: relative;
     color: #ffffff;
     text-decoration: none;
@@ -137,7 +135,7 @@ ul.cute li{
     font-size: 13px;
 }
 .menu ul li a i {
-    font-size: 3em;
+    font-size: 2.6em;
     margin-right: 6px;
     position: relative;
     top: 9px;
@@ -160,6 +158,17 @@ ul.cute li{
 	margin-left : -2px;
 	margin-right : 9px;
 }
+
+.menu ul li .fa-shopping-cart {
+	margin-left : -4px;
+	margin-right : 11px;
+}
+
+.menu ul li .fa-calendar {
+	margin-left : -2px;
+	margin-right : 9px;
+}
+
 
 .menu ul li a span {
 	display : inline-block;
@@ -195,7 +204,7 @@ li.item1 {
 /*-- //banner --*/
 /*-- banner-bottom --*/
 .banner-bottom{
-	padding-top : 8px;
+	padding-top : 11px;
 	background: #ff3d00;
 	height : 242px;
 }
@@ -212,7 +221,7 @@ li.item1 {
 }
 
 .banner-bottom-left1 .social {
-	margin-top : 18.5px;
+	margin-top : 5px;
 }
 
 .banner-bottom-left1 .social a, .banner-bottom-left1 .social a:visited {
@@ -226,7 +235,7 @@ li.item1 {
 .banner-bottom-left1 h4{
 	color: #ffffff;
 	line-height: 2.1em;
-	font-size: 1.4em;
+	font-size: 1.3em;
 }
 .banner-bottom-left2{
 	float:right;
@@ -551,6 +560,12 @@ h2.resp-accordion {
 	margin:0.5em auto 0;
 	width:70%;
 }
+.book_table label {
+	width:47.66%;
+	font-size:14px;
+	color:#000;
+	border-radius: 5px;
+}
 .book_table input[type="text"],select,.book_table input[type="email"],.book_table input[type="date"],.book_table textarea,.book_table input[type="time"]{
 	outline:none;
 	padding:12px 10px;
@@ -569,6 +584,10 @@ h2.resp-accordion {
 	line-height: 17px;
     padding: 11px 10px;
     margin: 0 0 0 2em;
+}
+.book_table label.message {
+	width:99% !important;
+	margin:1.5em 0;
 }
 .book_table textarea{
 	width:99% !important;
