--- a/WebContent/templates/fodder/css/style.css
+++ b/WebContent/templates/fodder/css/style.css
@@ -139,16 +139,16 @@ ul.cute li{
     position: relative;
     color: #ffffff;
     text-decoration: none;
-    line-height: 0.4em;
+    line-height: 0.6em;
     text-transform: uppercase;
     font-weight: bold;
     font-size: 0.8em;
 }
 .menu ul li a i {
     font-size: 2.6em;
-    margin-right: 6px;
+    margin-right: 0px;
     position: relative;
-    top: 9px;
+    top: 6px;
     color: #fff;
     display : inline-block;
     width : 50px;
@@ -156,27 +156,27 @@ ul.cute li{
 
 .menu ul li .fa-lock {
 	margin-left : 3px;
-	margin-right : 3px;
+	margin-right : -2px;
 }
 
 .menu ul li .fa-map-marker {
 	margin-left : 4px;
-	margin-right : 2px;
+	margin-right : -1px;
 }
 
 .menu ul li .fa-info-circle {
 	margin-left : -2px;
-	margin-right : 9px;
+	margin-right : 7px;
 }
 
 .menu ul li .fa-shopping-cart {
 	margin-left : -4px;
-	margin-right : 11px;
+	margin-right : 6px;
 }
 
 .menu ul li .fa-calendar {
 	margin-left : -2px;
-	margin-right : 9px;
+	margin-right : 7px;
 }
 
 
@@ -226,7 +226,7 @@ li.item1 {
 .banner-bottom-left1 p {
 	color : #000;
 	font-size : 0.9em;
-	padding-left : 32px;
+	padding-left : 10px;
 	font-family : Satisfy;
 }
 
@@ -236,7 +236,7 @@ li.item1 {
 
 .banner-bottom-left1 .social a, .banner-bottom-left1 .social a:visited {
     color: #fff;
-    font-size: 5em;
+    font-size: 3em;
     font-weight: bold;
     padding-right: 10px;
     cursor: pointer;
@@ -247,13 +247,14 @@ li.item1 {
 	line-height: 2.1em;
 	font-size: 1.6em;
 	font-family : Satisfy;
+	font-weight : bold;
 }
 .banner-bottom-left2{
 	float:right;
 	width:50%;
 }
 .banner-bottom-right h5 {
-    color: #ff3d00;
+    color: #fff;
     margin: 0em 0 0;
     line-height: 1.8em;
     padding-top: 6px;
@@ -278,11 +279,12 @@ h5 .fa {
 	text-align: center;
 }
 .banner-bottom-right p{
-	color: #ffffff;
+	color: #fff;
 	font-size: 14px;
-	margin:0 auto;
+	margin:10px auto;
 	line-height: 2em;
 	width: 75%;
+	font-weight : bold;
 }
 /*-- //banner-bottom --*/
 /*-- about --*/
@@ -882,7 +884,7 @@ h2.resp-accordion {
 
 .social a, .social a:visited {
 	color: #ff3d00;
-	font-size: 5em;
+	font-size: 3em;
 	font-weight: bold;
 	padding-right : 10px;
 	cursor : pointer;
